--- a/date/2026-02/index.htm
+++ b/date/2026-02/index.htm
@@ -110,6 +110,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2026-02-27">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-2-27-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「2月27日」最高速度23M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-2-27-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月27日」最高速度23M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、韩国、香港、新加坡、加拿大、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2026-02-26">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-2-26-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/6345d414940bf8384f94baa293357b86.webp" alt="「2月26日」最高速度19.9M/S，2025年Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-2-26-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月26日」最高速度19.9M/S，2025年Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、新加坡、美国、日本、加拿大、欧洲、香港等地区,最高速度可达19.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2026-02-25">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-2-25-shadowrocket-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/b9df39e5d5485e2cc4800be641032094.webp" alt="「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-2-25-shadowrocket-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、欧洲、美国等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2026-02-24">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-2-24-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/291f39868df7237a0f3ec70e78e9a24b.webp" alt="「2月24日」最高速度19.2M/S，2025年Shadowrocket节点/Trojan节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-2-24-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月24日」最高速度19.2M/S，2025年Shadowrocket节点/Trojan节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、加拿大、日本、新加坡、美国、韩国、香港等地区,最高速度可达19.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2026-02-23">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-2-23-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「2月23日」最高速度18.5M/S，2025年Clash节点/Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-2-23-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月23日」最高速度18.5M/S，2025年Clash节点/Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、新加坡、香港、日本、美国、加拿大、韩国等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2026-02-22">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2026-2-22-node-share.htm" class="xcblog-blog-url">
@@ -175,71 +240,6 @@
                                     <p>这一次的节点更新覆盖了美国、加拿大、韩国、欧洲、新加坡、日本、香港等地区,最高速度可达21.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2026-02-16">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2026-2-16-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2026-2-16-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、新加坡、加拿大、美国、香港、韩国、欧洲等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2026-02-15">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2026-2-15-free-ssr-node.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2026-2-15-free-ssr-node.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了欧洲、日本、加拿大、韩国、香港、新加坡、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2026-02-14">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2026-2-14-free-ssr-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2026-2-14-free-ssr-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了美国、新加坡、欧洲、香港、加拿大、日本、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2026-02-13">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2026-2-13-node-share.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2026-2-13-node-share.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了欧洲、加拿大、韩国、香港、日本、新加坡、美国等地区,最高速度可达21 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2026-02-12">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2026-2-12-node-share.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2026-2-12-node-share.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、美国、欧洲、香港、日本、韩国、新加坡等地区,最高速度可达18.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2026-02/page-2.htm">2</a></li><li><a href="/date/2026-02/page-3.htm">3</a></li> <li><a href="/date/2026-02/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-2-3-clash-v2ray-ss-ssr.htm" title="「2月3日」最高速度18.4M/S，2025年Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「2月3日」最高速度18.4M/S，2025年Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-20-free-v2ray.htm" title="「2月20日」最高速度18.5M/S，2025年Trojan节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「2月20日」最高速度18.5M/S，2025年Trojan节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-26-clash-node-daily-updates.htm" title="「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-25-free-node-subscribe-links.htm" title="「1月25日」最高速度20.2M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月25日」最高速度20.2M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-21-free-clash.htm" title="「1月21日」最高速度21.3M/S，2025年Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月21日」最高速度21.3M/S，2025年Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-27-free-v2ray-subscribe.htm" title="「1月27日」最高速度21.4M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「1月27日」最高速度21.4M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-22-node-share.htm" title="「2月22日」最高速度18M/S，2025年Trojan节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「2月22日」最高速度18M/S，2025年Trojan节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-20-free-node-subscribe.htm" title="「1月20日」最高速度19.9M/S，2025年SSR节点/Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「1月20日」最高速度19.9M/S，2025年SSR节点/Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-24-free-ssr-subscribe.htm" title="「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接">「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-31-free-high-speed-nodes.htm" title="「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-28-free-ssr-node.htm" title="「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-2-12-node-share.htm" title="「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-15-node-share.htm" title="「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-21-free-shadowrocket-node.htm" title="「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-14-free-ssr-subscribe.htm" title="「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-26-clash-node-daily-updates.htm" title="「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-24-free-ssr-subscribe.htm" title="「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接">「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-19-free-high-speed-nodes.htm" title="「1月19日」最高速度18.2M/S，2025年Shadowrocket节点/Trojan节点/Singbox节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「1月19日」最高速度18.2M/S，2025年Shadowrocket节点/Trojan节点/Singbox节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
