--- a/free-nodes/2026-2-17-free-node-subscribe-links.htm
+++ b/free-nodes/2026-2-17-free-node-subscribe-links.htm
@@ -146,9 +146,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Mellow 支持 IPv6，只需在配置文件中启用 IPv6 DNS 解析并确认操作系统开启 IPv6 路由功能。部分节点若不支持 IPv6，则相关请求会自动回退到 IPv4，保证兼容性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan 是否需要证书？</h5></div>
+    <div class="panel-heading"><h5>Vmess 的安全加密方式推荐使用哪种？</h5></div>
     <div class="panel-body">
-        是的，Trojan 必须使用有效的 TLS 证书才能运行。推荐使用 Let's Encrypt 免费证书。若证书过期或配置错误，客户端将无法建立加密连接，导致无法访问外部网络。<hr />    </div>
+        目前推荐使用 auto 或 none（结合 TLS 加密）以提升性能。旧版 AEAD 加密已被废弃，使用 TLS/XTLS 层提供的加密即可确保安全。过度加密反而增加 CPU 占用与延迟。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Sing-box 的性能比 Clash 好吗？</h5></div>
@@ -156,19 +156,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Sing-box 在性能优化上更为出色，特别是在高并发连接下延迟更低。它采用 Go 语言编写并优化了内存占用，比传统 Clash 内核运行更轻盈，尤其适合服务器端部署或移动端设备使用。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>VLess 使用 XTLS 时证书怎么配置更安全？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 如何实现端口与流量的精确分流？</h5></div>
     <div class="panel-body">
-        推荐使用可信 CA 签发的证书（例如 Let's Encrypt），并为服务器配置正确的域名、SNI 与证书链。避免使用自签名证书或错误域名，以免被客户端拒绝或被中间人攻击检测到。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>V2Ray 的 QUIC 传输模式有哪些优势？</h5></div>
-    <div class="panel-body">
-        QUIC 传输减少握手次数，支持多路复用和 UDP 基础，降低延迟并提高吞吐量。在不稳定或高丢包环境下，QUIC 可保证视频、游戏或即时通讯的稳定性和流畅体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Vmess 的安全加密方式推荐使用哪种？</h5></div>
-    <div class="panel-body">
-        目前推荐使用 auto 或 none（结合 TLS 加密）以提升性能。旧版 AEAD 加密已被废弃，使用 TLS/XTLS 层提供的加密即可确保安全。过度加密反而增加 CPU 占用与延迟。<hr />    </div>
+        Sing-box 支持按端口匹配流量，将不同类型应用的流量分配到指定节点。结合策略组使用，可提高访问速度和网络稳定性，实现精准分流和优化用户体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>VLESS + XTLS 在高延迟网络中如何优化连接？</h5></div>
@@ -181,14 +171,24 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         多策略组可以将节点按用途、延迟或地域分类，结合规则文件自动分流不同流量。这样可以确保游戏、视频或网页流量走最优节点，提高整体访问效率和稳定性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Shadowrocket 节点测速功能如何优化游戏体验？</h5></div>
+    <div class="panel-heading"><h5>Trojan 是否需要证书？</h5></div>
     <div class="panel-body">
-        Shadowrocket 会定期测速节点延迟和丢包率，并结合策略组自动切换最佳节点。保证游戏流量走低延迟节点，减少延迟和掉线，提高游戏流畅度和稳定性。<hr />    </div>
+        是的，Trojan 必须使用有效的 TLS 证书才能运行。推荐使用 Let's Encrypt 免费证书。若证书过期或配置错误，客户端将无法建立加密连接，导致无法访问外部网络。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 如何实现端口与流量的精确分流？</h5></div>
+    <div class="panel-heading"><h5>VLess 使用 XTLS 时证书怎么配置更安全？</h5></div>
     <div class="panel-body">
-        Sing-box 支持按端口匹配流量，将不同类型应用的流量分配到指定节点。结合策略组使用，可提高访问速度和网络稳定性，实现精准分流和优化用户体验。    </div>
+        推荐使用可信 CA 签发的证书（例如 Let's Encrypt），并为服务器配置正确的域名、SNI 与证书链。避免使用自签名证书或错误域名，以免被客户端拒绝或被中间人攻击检测到。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>V2Ray 的 QUIC 传输模式有哪些优势？</h5></div>
+    <div class="panel-body">
+        QUIC 传输减少握手次数，支持多路复用和 UDP 基础，降低延迟并提高吞吐量。在不稳定或高丢包环境下，QUIC 可保证视频、游戏或即时通讯的稳定性和流畅体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Shadowrocket 节点测速功能如何优化游戏体验？</h5></div>
+    <div class="panel-body">
+        Shadowrocket 会定期测速节点延迟和丢包率，并结合策略组自动切换最佳节点。保证游戏流量走低延迟节点，减少延迟和掉线，提高游戏流畅度和稳定性。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -217,16 +217,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-1-31-free-high-speed-nodes.htm" title="「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-19-free-high-speed-nodes.htm" title="「1月19日」最高速度18.2M/S，2025年Shadowrocket节点/Trojan节点/Singbox节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「1月19日」最高速度18.2M/S，2025年Shadowrocket节点/Trojan节点/Singbox节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-14-free-clash-subscribe.htm" title="「1月14日」最高速度18M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「1月14日」最高速度18M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-16-free-clash-subscribe.htm" title="「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-2-node-share.htm" title="「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-28-free-ssr-node.htm" title="「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-25-free-node-subscribe-links.htm" title="「1月25日」最高速度20.2M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月25日」最高速度20.2M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-2-18-free-subscribe-node.htm" title="「2月18日」最高速度18.5M/S，2025年Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「2月18日」最高速度18.5M/S，2025年Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-24-free-ssr-subscribe.htm" title="「2月24日」最高速度19.2M/S，2025年Shadowrocket节点/Trojan节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「2月24日」最高速度19.2M/S，2025年Shadowrocket节点/Trojan节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-21-free-shadowrocket-node.htm" title="「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-15-node-share.htm" title="「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-7-free-shadowrocket-node.htm" title="「2月7日」最高速度20.4M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月7日」最高速度20.4M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-31-free-high-speed-nodes.htm" title="「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-11-free-ssr-subscribe.htm" title="「2月11日」最高速度21M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月11日」最高速度21M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-2-8-clash-node.htm" title="「2月8日」最高速度20.8M/S，2025年Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「2月8日」最高速度20.8M/S，2025年Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-1-clash-v2ray-ss-ssr.htm" title="「2月1日」最高速度20.5M/S，2025年Singbox节点/Trojan节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「2月1日」最高速度20.5M/S，2025年Singbox节点/Trojan节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-20-free-v2ray.htm" title="「2月20日」最高速度18.5M/S，2025年Trojan节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「2月20日」最高速度18.5M/S，2025年Trojan节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-18-free-high-speed-nodes.htm" title="「1月18日」最高速度18.1M/S，2025年Trojan节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「1月18日」最高速度18.1M/S，2025年Trojan节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -238,7 +238,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
