--- a/free-nodes/2026-2-18-free-subscribe-node.htm
+++ b/free-nodes/2026-2-18-free-subscribe-node.htm
@@ -144,14 +144,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Shadowrocket 的节点延迟测量如何帮助选择节点？</h5></div>
+    <div class="panel-heading"><h5>如何在 V2Ray 中自定义路由规则？</h5></div>
     <div class="panel-body">
-        Shadowrocket 会测试节点延迟和丢包率，并根据结果排序。用户可快速选择延迟最低的节点访问网站或视频，提高连接速度和稳定性，优化整体网络体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 的域名规则如何实现分流？</h5></div>
-    <div class="panel-body">
-        Sing-box 支持按域名匹配流量，将不同网站或应用流量分配到指定节点。结合策略组自动切换低延迟节点，可优化访问速度，保证网络稳定性并提高整体体验。<hr />    </div>
+        在 V2Ray 中可以通过修改 config.json 文件中的 routing 部分来自定义路由规则。用户可以根据 IP 段、域名或地理位置来决定流量的去向，从而实现自动分流或访问加速的效果。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Mellow 的 TUN 模式与系统代理有何区别？</h5></div>
@@ -159,14 +154,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         TUN 模式拦截系统 IP 层流量，实现全局代理，而系统代理通常只影响支持代理的应用。TUN 更适合游戏、视频和全局科学上网场景，保证所有流量通过节点，提高稳定性和速度。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>如何在 V2Ray 中自定义路由规则？</h5></div>
+    <div class="panel-heading"><h5>Nekoray 的节点导入是否支持批量 URL？</h5></div>
     <div class="panel-body">
-        在 V2Ray 中可以通过修改 config.json 文件中的 routing 部分来自定义路由规则。用户可以根据 IP 段、域名或地理位置来决定流量的去向，从而实现自动分流或访问加速的效果。<hr />    </div>
+        支持。Nekoray 可通过订阅 URL 批量导入节点，并定期更新。用户无需手动添加每个节点，保证节点列表始终最新，提高使用效率和便利性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Potatso Lite 是否支持手动节点管理？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 的域名规则如何实现分流？</h5></div>
     <div class="panel-body">
-        支持。用户可手动输入节点信息或扫描二维码导入节点，并可进行修改或删除。虽然不支持自动订阅更新，但足以满足轻量用户对节点管理和流量分流的需求。<hr />    </div>
+        Sing-box 支持按域名匹配流量，将不同网站或应用流量分配到指定节点。结合策略组自动切换低延迟节点，可优化访问速度，保证网络稳定性并提高整体体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Trojan 协议的安全性如何？</h5></div>
@@ -179,14 +174,19 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         若 Netch 无法代理游戏，需检查游戏进程是否被正确捕获，以及防火墙是否阻止了 TUN 模式。可尝试以管理员身份运行程序，或切换为 Socks 模式重新导入节点。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekoray 的节点导入是否支持批量 URL？</h5></div>
-    <div class="panel-body">
-        支持。Nekoray 可通过订阅 URL 批量导入节点，并定期更新。用户无需手动添加每个节点，保证节点列表始终最新，提高使用效率和便利性。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>V2Ray 的 WebSocket + TLS 配置有哪些优势？</h5></div>
     <div class="panel-body">
         WebSocket + TLS 可以伪装成普通 HTTPS 流量，增强抗封锁能力。适合高封锁环境，结合域名伪装和策略组，可实现高安全性和稳定的网络访问体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Shadowrocket 的节点延迟测量如何帮助选择节点？</h5></div>
+    <div class="panel-body">
+        Shadowrocket 会测试节点延迟和丢包率，并根据结果排序。用户可快速选择延迟最低的节点访问网站或视频，提高连接速度和稳定性，优化整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Potatso Lite 是否支持手动节点管理？</h5></div>
+    <div class="panel-body">
+        支持。用户可手动输入节点信息或扫描二维码导入节点，并可进行修改或删除。虽然不支持自动订阅更新，但足以满足轻量用户对节点管理和流量分流的需求。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Mellow TUN 模式如何拦截全局流量？</h5></div>
@@ -220,16 +220,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-2-22-node-share.htm" title="「2月22日」最高速度18M/S，2025年Trojan节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「2月22日」最高速度18M/S，2025年Trojan节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-15-free-ssr-node.htm" title="「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-12-node-share.htm" title="「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-16-node-share-links.htm" title="「1月16日」最高速度18.7M/S，2025年V2ray节点/Clash节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「1月16日」最高速度18.7M/S，2025年V2ray节点/Clash节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-16-free-clash-subscribe.htm" title="「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-17-free-node-subscribe-links.htm" title="「2月17日」最高速度21.2M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「2月17日」最高速度21.2M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-20-free-node-subscribe.htm" title="「1月20日」最高速度19.9M/S，2025年SSR节点/Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「1月20日」最高速度19.9M/S，2025年SSR节点/Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-4-free-subscribe-node.htm" title="「2月4日」最高速度19.2M/S，2025年Singbox节点/Clash节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「2月4日」最高速度19.2M/S，2025年Singbox节点/Clash节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-1-clash-v2ray-ss-ssr.htm" title="「2月1日」最高速度20.5M/S，2025年Singbox节点/Trojan节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「2月1日」最高速度20.5M/S，2025年Singbox节点/Trojan节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-13-node-share.htm" title="「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-25-shadowrocket-node.htm" title="「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-2-node-share.htm" title="「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-14-free-ssr-subscribe.htm" title="「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-30-clash-v2ray-ss-ssr.htm" title="「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-24-free-ssr-subscribe.htm" title="「2月24日」最高速度19.2M/S，2025年Shadowrocket节点/Trojan节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「2月24日」最高速度19.2M/S，2025年Shadowrocket节点/Trojan节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-5-free-high-speed-nodes.htm" title="「2月5日」最高速度20.3M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/Trojan节点每天更新免费节点订阅链接">「2月5日」最高速度20.3M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-17-free-clash.htm" title="「1月17日」最高速度20M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点每天更新免费节点订阅链接">「1月17日」最高速度20M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-23-node-share-links.htm" title="「2月23日」最高速度18.5M/S，2025年Clash节点/Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「2月23日」最高速度18.5M/S，2025年Clash节点/Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-24-free-ssr-subscribe.htm" title="「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接">「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-22-free-shadowrocket-node.htm" title="「1月22日」最高速度20.4M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「1月22日」最高速度20.4M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -241,7 +241,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
