--- a/free-nodes/2026-2-20-free-v2ray.htm
+++ b/free-nodes/2026-2-20-free-v2ray.htm
@@ -141,19 +141,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Mellow 使用透明代理时如何避免 DNS 泄露？</h5></div>
-    <div class="panel-body">
-        在 Mellow 中启用 fake-ip 或内置 DNS 解析功能，并将上游 DNS 指定为 DoH/DoT 服务，确保所有 DNS 请求通过代理转发而非本地解析，从而避免 ISP 或本地网络捕获实际访问域名。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>Sing-box 如何实现端口与流量的精确分流？</h5></div>
     <div class="panel-body">
         Sing-box 支持按端口匹配流量，将不同类型应用的流量分配到指定节点。结合策略组使用，可提高访问速度和网络稳定性，实现精准分流和优化用户体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Mihomo 如何启用 TUN 模式？</h5></div>
+    <div class="panel-heading"><h5>Trojan-go 如何启用 WebSocket 支持？</h5></div>
     <div class="panel-body">
-        在 Mihomo 的配置文件中启用 `tun:` 模块并安装系统驱动即可实现全局代理。TUN 模式可将所有系统流量导向代理核心，实现真正意义上的全局加速。<hr />    </div>
+        在配置文件中将 transport 参数设置为 websocket，并指定 path 路径。客户端需同步使用相同路径及主机名。这样可将 Trojan 流量伪装为普通 WebSocket 通信以提升隐蔽性。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Matsuri 节点延迟排序功能如何使用？</h5></div>
@@ -161,9 +156,24 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Matsuri 定期测速节点延迟，并结合策略组自动选择延迟最低的节点。用户无需手动切换节点，即可保持高速访问，提高网页、视频和游戏体验的稳定性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Surfboard 与 Clash 有什么关系？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 如何按 IP 段实现智能分流？</h5></div>
     <div class="panel-body">
-        Surfboard 是一款基于 Clash 核心的 iOS 应用，专为苹果用户设计。它通过友好的界面实现分流管理、节点切换和延迟测试等功能。与 Clash 类似，Surfboard 也支持订阅更新和多种代理协议，兼容性非常好。<hr />    </div>
+        Sing-box 支持根据 IP 段匹配流量，将国内流量直连、国外流量走代理。结合策略组和规则文件，实现精细化流量管理，保证访问速度和稳定性，同时提高节点使用效率。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Clash 如何防止规则文件冲突导致分流异常？</h5></div>
+    <div class="panel-body">
+        合理组织规则顺序，将更具体的规则放在前面，通配规则放在末尾；使用 rule-providers 分离不同来源的规则，避免重复条目，并在变更后使用日志或 debug 模式检验分流是否按预期生效。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Mihomo 如何启用 TUN 模式？</h5></div>
+    <div class="panel-body">
+        在 Mihomo 的配置文件中启用 `tun:` 模块并安装系统驱动即可实现全局代理。TUN 模式可将所有系统流量导向代理核心，实现真正意义上的全局加速。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Mellow 使用透明代理时如何避免 DNS 泄露？</h5></div>
+    <div class="panel-body">
+        在 Mellow 中启用 fake-ip 或内置 DNS 解析功能，并将上游 DNS 指定为 DoH/DoT 服务，确保所有 DNS 请求通过代理转发而非本地解析，从而避免 ISP 或本地网络捕获实际访问域名。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Clash 支持哪些协议？</h5></div>
@@ -176,19 +186,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         策略组允许用户将节点按延迟、地域或用途分组。结合路由规则，V2Ray 会自动选择最优节点处理流量，提升访问速度并降低延迟，尤其在访问海外网站时效果明显。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan-go 如何启用 WebSocket 支持？</h5></div>
+    <div class="panel-heading"><h5>Surfboard 与 Clash 有什么关系？</h5></div>
     <div class="panel-body">
-        在配置文件中将 transport 参数设置为 websocket，并指定 path 路径。客户端需同步使用相同路径及主机名。这样可将 Trojan 流量伪装为普通 WebSocket 通信以提升隐蔽性。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Clash 如何防止规则文件冲突导致分流异常？</h5></div>
-    <div class="panel-body">
-        合理组织规则顺序，将更具体的规则放在前面，通配规则放在末尾；使用 rule-providers 分离不同来源的规则，避免重复条目，并在变更后使用日志或 debug 模式检验分流是否按预期生效。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 如何按 IP 段实现智能分流？</h5></div>
-    <div class="panel-body">
-        Sing-box 支持根据 IP 段匹配流量，将国内流量直连、国外流量走代理。结合策略组和规则文件，实现精细化流量管理，保证访问速度和稳定性，同时提高节点使用效率。    </div>
+        Surfboard 是一款基于 Clash 核心的 iOS 应用，专为苹果用户设计。它通过友好的界面实现分流管理、节点切换和延迟测试等功能。与 Clash 类似，Surfboard 也支持订阅更新和多种代理协议，兼容性非常好。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -217,16 +217,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-2-1-clash-v2ray-ss-ssr.htm" title="「2月1日」最高速度20.5M/S，2025年Singbox节点/Trojan节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「2月1日」最高速度20.5M/S，2025年Singbox节点/Trojan节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-17-free-clash.htm" title="「1月17日」最高速度20M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点每天更新免费节点订阅链接">「1月17日」最高速度20M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-16-free-clash-subscribe.htm" title="「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「2月16日」最高速度22.9M/S，2025年SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-2-node-share.htm" title="「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-6-free-node-subscribe-links.htm" title="「2月6日」最高速度21.7M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Trojan节点每天更新免费节点订阅链接">「2月6日」最高速度21.7M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-8-clash-node.htm" title="「2月8日」最高速度20.8M/S，2025年Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「2月8日」最高速度20.8M/S，2025年Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-13-node-share.htm" title="「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-14-free-clash-subscribe.htm" title="「1月14日」最高速度18M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「1月14日」最高速度18M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-31-free-high-speed-nodes.htm" title="「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「1月31日」最高速度21.3M/S，2025年V2ray节点/Singbox节点/Clash节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-4-free-subscribe-node.htm" title="「2月4日」最高速度19.2M/S，2025年Singbox节点/Clash节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「2月4日」最高速度19.2M/S，2025年Singbox节点/Clash节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-14-free-ssr-subscribe.htm" title="「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月14日」最高速度22.3M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-26-clash-node-daily-updates.htm" title="「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-25-shadowrocket-node.htm" title="「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-9-clash-node.htm" title="「2月9日」最高速度22.9M/S，2025年Shadowrocket节点/Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「2月9日」最高速度22.9M/S，2025年Shadowrocket节点/Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-30-clash-v2ray-ss-ssr.htm" title="「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-18-free-subscribe-node.htm" title="「2月18日」最高速度18.5M/S，2025年Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「2月18日」最高速度18.5M/S，2025年Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-20-free-node-subscribe.htm" title="「1月20日」最高速度19.9M/S，2025年SSR节点/Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「1月20日」最高速度19.9M/S，2025年SSR节点/Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-16-node-share-links.htm" title="「1月16日」最高速度18.7M/S，2025年V2ray节点/Clash节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「1月16日」最高速度18.7M/S，2025年V2ray节点/Clash节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-13-node-share.htm" title="「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月13日」最高速度21M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -238,7 +238,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
