--- a/free-nodes/2026-2-21-free-shadowrocket-node.htm
+++ b/free-nodes/2026-2-21-free-shadowrocket-node.htm
@@ -149,34 +149,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Quantumult X 是一款功能极其强大的 iOS 网络代理应用，支持多种协议和脚本扩展。它可以通过规则分流、广告屏蔽、请求重写等方式优化网络体验。Quantumult X 常被技术用户用于高级自动化与自定义代理策略。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 支持哪些类型的分流规则？</h5></div>
-    <div class="panel-body">
-        Sing-box 支持域名、IP、端口、协议类型、用户标签等多种分流规则。结合策略组，可实现精细化流量管理，满足视频加速、广告屏蔽和游戏优化等多样化需求。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 如何防止流量被 DPI 检测？</h5></div>
-    <div class="panel-body">
-        通过协议插件和混淆方式可以模拟正常 HTTPS 或 HTTP 流量，隐藏真实流量特征。合理配置混淆插件和加密方式，可以有效绕过 DPI 检测，保证连接稳定性和长期可用性。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>Surfboard 的节点策略组如何提升使用体验？</h5></div>
     <div class="panel-body">
         策略组可将节点按延迟、用途或地理位置分类，通过规则自动选择最优节点。用户无需手动切换节点即可获得最佳速度和稳定性，提高浏览和观看流媒体的体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>WinXray 支持测速功能吗？</h5></div>
-    <div class="panel-body">
-        支持。WinXray 提供节点延迟测速功能，可检测每个节点的响应时间与可用性。测速结果能帮助用户选择最快线路，也能排除无效或不稳定的节点，提高整体网络体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekoray 与 Nekobox 有什么不同？</h5></div>
-    <div class="panel-body">
-        Nekoray 是一款基于 Qt 的跨平台代理前端，而 Nekobox 更偏向移动端简化使用。两者均支持 V2Ray/VLESS/Trojan 协议，但 Nekobox 提供了更轻量的界面和更快的连接启动速度。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan 的伪装域名配置有哪些注意事项？</h5></div>
-    <div class="panel-body">
-        伪装域名必须真实可访问且证书有效，否则无法建立连接。正确配置可隐藏真实流量特征，降低被封锁和检测风险，提高节点安全性和长期可用性。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Matsuri 节点延迟排序功能如何使用？</h5></div>
@@ -184,14 +159,39 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Matsuri 会定期测速节点延迟，并根据结果排序。用户可选择延迟最低的节点进行访问，结合策略组实现自动切换，提高网络速度和连接稳定性。<hr />    </div>
 </div>
 <div class="panel panel-default">
+    <div class="panel-heading"><h5>WinXray 支持测速功能吗？</h5></div>
+    <div class="panel-body">
+        支持。WinXray 提供节点延迟测速功能，可检测每个节点的响应时间与可用性。测速结果能帮助用户选择最快线路，也能排除无效或不稳定的节点，提高整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Hysteria2 在丢包环境下如何配置更稳？</h5></div>
+    <div class="panel-body">
+        可调整 Hysteria2 的拥塞控制与重传参数，启用 FEC（前向纠错）并合理设置 MTU 与窗口大小以适应链路特性。还可尝试切换 QUIC 参数或更换中转以减少丢包影响。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Trojan 的伪装域名配置有哪些注意事项？</h5></div>
+    <div class="panel-body">
+        伪装域名必须真实可访问且证书有效，否则无法建立连接。正确配置可隐藏真实流量特征，降低被封锁和检测风险，提高节点安全性和长期可用性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>SSR 如何防止流量被 DPI 检测？</h5></div>
+    <div class="panel-body">
+        通过协议插件和混淆方式可以模拟正常 HTTPS 或 HTTP 流量，隐藏真实流量特征。合理配置混淆插件和加密方式，可以有效绕过 DPI 检测，保证连接稳定性和长期可用性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Nekoray 与 Nekobox 有什么不同？</h5></div>
+    <div class="panel-body">
+        Nekoray 是一款基于 Qt 的跨平台代理前端，而 Nekobox 更偏向移动端简化使用。两者均支持 V2Ray/VLESS/Trojan 协议，但 Nekobox 提供了更轻量的界面和更快的连接启动速度。<hr />    </div>
+</div>
+<div class="panel panel-default">
     <div class="panel-heading"><h5>Hiddify Next 是否兼容 Clash 或 V2Ray 配置文件？</h5></div>
     <div class="panel-body">
         Hiddify Next 支持部分 Clash 与 Xray 订阅格式，但建议使用其官方订阅格式以获得完整兼容。若订阅转换异常，可使用 Hiddify 提供的在线转换工具重新生成配置文件导入。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Hysteria2 在丢包环境下如何配置更稳？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 支持哪些类型的分流规则？</h5></div>
     <div class="panel-body">
-        可调整 Hysteria2 的拥塞控制与重传参数，启用 FEC（前向纠错）并合理设置 MTU 与窗口大小以适应链路特性。还可尝试切换 QUIC 参数或更换中转以减少丢包影响。    </div>
+        Sing-box 支持域名、IP、端口、协议类型、用户标签等多种分流规则。结合策略组，可实现精细化流量管理，满足视频加速、广告屏蔽和游戏优化等多样化需求。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -220,16 +220,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-2-15-free-ssr-node.htm" title="「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-22-free-shadowrocket-node.htm" title="「1月22日」最高速度20.4M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「1月22日」最高速度20.4M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-7-free-shadowrocket-node.htm" title="「2月7日」最高速度20.4M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月7日」最高速度20.4M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-8-clash-node.htm" title="「2月8日」最高速度20.8M/S，2025年Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「2月8日」最高速度20.8M/S，2025年Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-25-free-node-subscribe-links.htm" title="「1月25日」最高速度20.2M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月25日」最高速度20.2M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-2-node-share.htm" title="「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接">「2月2日」最高速度22.2M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/Trojan节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-9-clash-node.htm" title="「2月9日」最高速度22.9M/S，2025年Shadowrocket节点/Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「2月9日」最高速度22.9M/S，2025年Shadowrocket节点/Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-16-node-share-links.htm" title="「1月16日」最高速度18.7M/S，2025年V2ray节点/Clash节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「1月16日」最高速度18.7M/S，2025年V2ray节点/Clash节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-23-node-share-links.htm" title="「2月23日」最高速度18.5M/S，2025年Clash节点/Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「2月23日」最高速度18.5M/S，2025年Clash节点/Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-28-free-ssr-node.htm" title="「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-30-clash-v2ray-ss-ssr.htm" title="「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-14-free-clash-subscribe.htm" title="「1月14日」最高速度18M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「1月14日」最高速度18M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-11-free-ssr-subscribe.htm" title="「2月11日」最高速度21M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月11日」最高速度21M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-24-free-ssr-subscribe.htm" title="「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接">「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-26-clash-node-daily-updates.htm" title="「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-3-clash-v2ray-ss-ssr.htm" title="「2月3日」最高速度18.4M/S，2025年Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「2月3日」最高速度18.4M/S，2025年Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-21-free-shadowrocket-node.htm" title="「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-15-node-share.htm" title="「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-15-free-ssr-node.htm" title="「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「2月15日」最高速度18.7M/S，2025年Trojan节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -241,7 +241,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
