--- a/privacy.htm
+++ b/privacy.htm
@@ -162,16 +162,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-1-26-clash-node-daily-updates.htm" title="「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-30-clash-v2ray-ss-ssr.htm" title="「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月30日」最高速度18.1M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-3-clash-v2ray-ss-ssr.htm" title="「2月3日」最高速度18.4M/S，2025年Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「2月3日」最高速度18.4M/S，2025年Trojan节点/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-4-free-subscribe-node.htm" title="「2月4日」最高速度19.2M/S，2025年Singbox节点/Clash节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「2月4日」最高速度19.2M/S，2025年Singbox节点/Clash节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-6-free-node-subscribe-links.htm" title="「2月6日」最高速度21.7M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Trojan节点每天更新免费节点订阅链接">「2月6日」最高速度21.7M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-28-free-ssr-node.htm" title="「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接">「1月28日」最高速度20.8M/S，2025年Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/Trojan节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-17-free-clash.htm" title="「1月17日」最高速度20M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点每天更新免费节点订阅链接">「1月17日」最高速度20M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-27-node-share-links.htm" title="「2月27日」最高速度23M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「2月27日」最高速度23M/S，2025年SSR节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-12-node-share.htm" title="「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月12日」最高速度18.1M/S，2025年Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-15-node-share.htm" title="「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「1月15日」最高速度20.2M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-26-node-share-links.htm" title="「2月26日」最高速度19.9M/S，2025年Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月26日」最高速度19.9M/S，2025年Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-10-clash-windows.htm" title="「2月10日」最高速度20.3M/S，2025年Singbox节点/Trojan节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「2月10日」最高速度20.3M/S，2025年Singbox节点/Trojan节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-26-clash-node-daily-updates.htm" title="「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月26日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-24-free-ssr-subscribe.htm" title="「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接">「1月24日」最高速度22.5M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/Trojan节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-22-free-shadowrocket-node.htm" title="「1月22日」最高速度20.4M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「1月22日」最高速度20.4M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-21-free-clash.htm" title="「1月21日」最高速度21.3M/S，2025年Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Trojan节点每天更新免费节点订阅链接">「1月21日」最高速度21.3M/S，2025年Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Trojan节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-25-shadowrocket-node.htm" title="「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「2月25日」最高速度19.4M/S，2025年Trojan节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-21-free-shadowrocket-node.htm" title="「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接">「2月21日」最高速度19.1M/S，2025年Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Trojan节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -183,7 +183,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
